# stego-sign

./: .dockerignore  .gitignore  Makefile  README.md  compose.yml
app/: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md
app/src/: app.rs
app/src/features/: mod.rs
app/src/features/documents/: api.rs  page.rs
app/src/features/documents/components/: document_row.rs  empty_state.rs  mod.rs  status_badge.rs
app/src/features/home/: api.rs  page.rs
app/src/features/sign/: api.rs  page.rs
app/src/features/sign/components/: drop_zone.rs  mod.rs  result_card.rs  steps_flow.rs  steps_modal.rs
app/src/features/verify/: api.rs  page.rs
app/src/features/verify/components/: code_input.rs  mod.rs  result_card.rs  steps_flow.rs  steps_modal.rs
app/src/shared/components/: navbar.rs
app/style/: main.css
server/: Cargo.toml  Dockerfile
server/migrations/: doc.md  schema_app.sql
server/src/: main.rs
server/src/config/: env.rs
server/src/handlers/: documents.rs  mod.rs  sign.rs  storage_download.rs  verify.rs  verify_code.rs
server/src/models/: audit_log.rs  document.rs  mod.rs  response.rs
server/src/repositories/: audit_log.rs  document.rs  mod.rs  object.rs
server/src/routes/: v1.rs
server/src/services/: crypto.rs  mod.rs  qr.rs  stego.rs  storage.rs  watermark.rs
