[package]
name = "stego-app"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.8.0" }
leptos_router = { version = "0.8.0" }
leptos_meta = { version = "0.8.0" }
axum = { version = "0.8.0", optional = true }
console_error_panic_hook = { version = "0.1", optional = true }
leptos_axum = { version = "0.8.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
wasm-bindgen = { version = "0.2", optional = true }

lucide-leptos = { version = "2.576.0", features = ["all-icons"] }

# -- http client
gloo-net = { version = "0.6", features = ["http"] }

# -- serialización
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# -- web apis
web-sys = { version = "0.3", features = [
    "File",
    "FileList",
    "FormData",
    "HtmlInputElement",
    "HtmlAnchorElement",
    "Window",
    "EventTarget",
    "DragEvent",
    "DataTransfer",
    "Navigator",
    "Clipboard",
    "Document",
    "HtmlElement",
    "Element",
    "HtmlMetaElement",
] }

gloo-timers = { version = "0.3", features = ["futures"] }
wasm-bindgen-futures = "0.4"

# -- utils
thiserror = "2"
tracing = "0.1"

[features]
hydrate = ["leptos/hydrate", "dep:console_error_panic_hook", "dep:wasm-bindgen"]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
]

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "stego-app"
site-root = "target/site"
site-pkg-dir = "pkg"

# -- cambia scss por css
style-file = "style/main.css"

assets-dir = "public"
site-addr = "127.0.0.1:3001"
reload-port = 3002

end2end-cmd = "npx playwright test"
end2end-dir = "end2end"

browserquery = "defaults"
env = "DEV"

bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
